--- a/jsLearning/index.html
+++ b/jsLearning/index.html
@@ -8,9 +8,18 @@
 </head>
 <body>
    
-    <h1>Hello World with JS</h1>
+    <h3>Hello World with JS</h3>
     <p> stuff that goes in a p tag</p>
     <p> stuff that goes in a p tag</p>
+
+    <a href="http://">Link 1</a>
+    <a href="http://">Link 2</a>
+    <a href="http://">Link 3</a>
+    <a href="http://">Link 4</a>
+    <a href="http://">Link 5</a>
+    <a href="http://">Link 6</a>
+    <a href="http://">Link 7</a>
+
     <script src="scripts/test.js"></script>  
 </body>
 </html>
